Fixed change location link on mobile (#1639)
* Fixed change location link on mobile

* Set cursor: pointer on location-dropdown

--- a/app/styles/components/location-dropdown.less
+++ b/app/styles/components/location-dropdown.less
@@ -1,6 +1,7 @@
 .LocationDropdown {
   .h1;
   margin-top: 0;
+  cursor: pointer;
 }
 
 .LocationDropdown select {
